# splat_attribs

./: Cargo.toml  README.md
sandbox/: Cargo.toml
sandbox/src/: main.rs
splat_attribs/: Cargo.toml
splat_attribs/src/: lib.rs
