[package]
description = "Simple macro that splatters attributes across multiple items"
edition     = "2021"
license     = "MIT"
name        = "splat_attribs"
readme      = "../README.md"
repository  = "https://github.com/Noam2Stein/splat_attribs"
version     = "1.0.0"

[lib]

proc-macro = true

[dependencies]
derive-syn-parse = "0.2.0"
proc-macro2      = "1.0.93"
quote            = "1.0.38"
syn              = { version = "2.0.96", features = [ "full" ] }
